--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <h2>Chorwacja</h2>
         <img src="MicrosoftTeams-image.png" alt="">
     </section>
+    <section class="chorwacja">
+        <h2>Chorwacja</h2>
+    </section>
 </body>
 </html>
